--- a/main.css
+++ b/main.css
@@ -1,8 +1,9 @@
 .myGrid {
     width: 100%;
     height: 90vh;
+    text-align: center
 }
-.btn {
+.btn, .smallBtn {
     color: #ffffff;
     background-color: #18bc9c;
     border-color: #18bc9c;
@@ -17,6 +18,13 @@
     white-space: nowrap;
     padding: 10px 15px;
     font-size: 15px;
-    line-height: 1.42857143;
+    line-height: 1.4;
     border-radius: 4px;
+}
+
+.smallBtn {
+    font-size: 13px;
+    padding: 5px 10px;
+    margin: 5px 10px;
+    float: right;
 }
