Rearrange the main css file

--- a/main.css
+++ b/main.css
@@ -1,10 +1,12 @@
-.myGrid {
+.myGrid 
+{
     width: 100%;
     height: 90vh;
     text-align: center
 }
 
-.btn {
+.btn 
+{
     color: #ffffff;
     background-color: #18bc9c;
     border-color: #18bc9c;
@@ -25,7 +27,7 @@
 
 .btn:hover
 {
-    background: rgba(0,0,0,0.4);  
+    background: rgba(24, 188, 156, 0.5);  
 }
 
 .cancelBtn
@@ -34,9 +36,9 @@
     border-color: #bc1841;
 }
 
-.inputFields
+.cancelBtn:hover
 {
-    margin-bottom: 0.83em;
+    background: rgba(188, 24, 65, 0.5);
 }
 
 .smallBtn {
@@ -44,4 +46,9 @@
     padding: 5px 10px;
     margin: 5px 10px;
     float: right;
+}
+
+.inputFields
+{
+    margin-bottom: 0.83em;
 }
