--- a/main.css
+++ b/main.css
@@ -52,3 +52,10 @@
 {
     margin-bottom: 0.83em;
 }
+
+.dialogInput
+{
+    border-radius: 4px;
+    border: 1px solid #f0f0f0;
+    padding: 2px;
+}
