Add cellNav, resizeColumns and moveColumns

--- a/main.css
+++ b/main.css
@@ -72,14 +72,7 @@
     border-color: gray;
 }
 
-.ng-invalid
+input .ng-invalid
 {
     border: 2px solid #bc1841;
-}
-
-label 
-{
-    display: inline-block;
-    width: 140px;
-    text-align: right;
 }
