--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-.myGrid 
+.grid 
 {
     width: 100%;
     height: 90vh;
@@ -88,4 +88,15 @@ label
 {
     color:#bc1841;
     font-size: 12px;
+}
+
+.loading
+{
+    position: fixed;
+    width: 256px;
+    height: 256px;
+    top: 50%;
+    left: 50%;
+    margin-top: -128px; /* Negative half of height. */
+    margin-left: -128px; /* Negative half of width. */
 }
